samples/_failures_safe/1761799836_79a96c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6f17e7f.c: In function ‘main’:
./samples/SAFE/__tmp_a6f17e7f.c:162:47: error: missing terminating " character
  162 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE
      |                                               ^~~~~~
./samples/SAFE/__tmp_a6f17e7f.c:162:5: error: expected expression at end of input
  162 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE
      |     ^~~~~~
./samples/SAFE/__tmp_a6f17e7f.c:162:5: error: expected declaration or statement at end of input
